--- a/spring-security2-db/pom.xml
+++ b/spring-security2-db/pom.xml
@@ -20,11 +20,15 @@
 
 	<dependencies>
 		<!-- dependenciesタグ内に、以下の4つを追加します -->
+
+		<!-- DataTablesライブラリ。テーブルに検索機能やソート機能が追加可能 -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>datatables</artifactId>
 			<version>1.10.24</version>
 		</dependency>
+
+		<!-- DataTablesのプラグイン。ExcelやCSV出力が簡単にできる -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>datatables-plugins</artifactId>
